--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/MainExtensions/SourceMigrationReader/Templates/SourceMigrationReader.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/MainExtensions/SourceMigrationReader/Templates/SourceMigrationReader.html
@@ -36,5 +36,32 @@
     <vr-columns width="fullrow">
         <vr-textarea label="Connection String" value="connectionString" isrequired />
     </vr-columns>
-
+    <vr-row>
+        <vr-section title="Parameter Definition">
+            <vr-columns colnum="6">
+                <vr-select label="Parameter Definitions"
+                           datasource="parameterDefinitions"
+                           selectedvalues="selectedItems"
+                           onselectitem="onSelectParameterDefinition"
+                           ondeselectitem="onDeselectParameterDefinition"
+                           onselectionchanged="onOParameterDefinitionsChanged"
+                           datavaluefield="Name"
+                           hideselectedvaluessection
+                           datatextfield="DisplayName"
+                           hideremoveicon
+                           isrequired="false"
+                           ismultipleselection>
+                </vr-select>
+            </vr-columns>
+            <vr-columns width="fullrow">
+                <vr-datagrid datasource="selectedParameterDefinitions"
+                             idfield="Name">
+                    <vr-datagridcolumn headertext="'Name'" field="'DisplayName'" type="'Text'" widthfactor="50"></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Value'" field="" widthfactor="50" disablesorting>
+                        <vr-textbox value="dataItem.Value" type="text" isrequired="true"></vr-textbox>
+                    </vr-datagridcolumn>
+                </vr-datagrid>
+            </vr-columns>
+        </vr-section>
+    </vr-row>
 </vr-row>
