--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/WhS_RouteSync/Directives/MainExtensions/RadiusDataManagers/Templates/DoubleSQLRadiusSWDataManagerTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/WhS_RouteSync/Directives/MainExtensions/RadiusDataManagers/Templates/DoubleSQLRadiusSWDataManagerTemplate.html
@@ -2,9 +2,17 @@
     <vr-columns colnum="{{ctrlData.normalColNum}}">
         <vr-textbox label="Connection String" type="text" value="scopeModel.connectionString" isrequired></vr-textbox>
     </vr-columns>
-</vr-row>
-<vr-row removeline>
     <vr-columns colnum="{{ctrlData.normalColNum}}">
-        <vr-textbox label="Redundant Connection String" type="text" value="scopeModel.redundantConnectionString"></vr-textbox>
+        <vr-textbox label="Maximum Degree of Parallelism" type="number" value="scopeModel.maxDoP" minvalue="1" decimalprecision="0"></vr-textbox>
     </vr-columns>
 </vr-row>
+<vr-section title="Redundant Settings">
+    <vr-row removeline>
+        <vr-columns colnum="{{ctrlData.normalColNum}}">
+            <vr-textbox label="Redundant Connection String" type="text" value="scopeModel.redundantConnectionString"></vr-textbox>
+        </vr-columns>
+        <vr-columns colnum="{{ctrlData.normalColNum}}">
+            <vr-textbox label="Redundant Maximum Degree of Parallelism" type="number" value="scopeModel.redumdantMaxDoP" minvalue="1" decimalprecision="0"></vr-textbox>
+        </vr-columns>
+    </vr-row>
+</vr-section>
