--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/Package/PackageEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/Package/PackageEditor.html
@@ -34,7 +34,7 @@
     <div>
         <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
             <div transclude-to="buttons">
-                <vr-button type="Save" data-onclick="scopeModel.save" formname="formPackageEditor" haspermission="hasSavePackagePermission"></vr-button>
+                <vr-button type="Save" data-onclick="scopeModel.save" formname="formPackageEditor" ></vr-button>
                 <vr-button type="Close" data-onclick="scopeModel.close"></vr-button>
             </div>
         </vr-actionbar>
