--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/BEParentChildRelation/BEParentChildRelationDefinition/Templates/BEParentChildRelationDefinitionSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/BEParentChildRelation/BEParentChildRelationDefinition/Templates/BEParentChildRelationDefinitionSettingsTemplate.html
@@ -20,7 +20,7 @@
         </vr-row>
         <vr-row>
             <vr-columns width="fullrow">
-                <vr-textarea value="scopeModel.childFilterFQTN" label="Child Filter FQTN" isrequired="true"></vr-textarea>
+                <vr-textarea value="scopeModel.childFilterFQTN" label="Child Filter FQTN"></vr-textarea>
             </vr-columns>
         </vr-row>
     </vr-tab>
