--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/MainExtensions/SourceMigrationReader/Templates/SourceMigrationReader.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/MainExtensions/SourceMigrationReader/Templates/SourceMigrationReader.html
@@ -36,7 +36,7 @@
     <vr-columns width="fullrow">
         <vr-textarea label="Connection String" value="connectionString" isrequired />
     </vr-columns>
-    <vr-row>
+    <vr-columns width="fullrow">
         <vr-section title="Parameter Definition">
             <vr-columns colnum="6">
                 <vr-select label="Parameter Definitions"
@@ -63,5 +63,5 @@
                 </vr-datagrid>
             </vr-columns>
         </vr-section>
-    </vr-row>
+    </vr-columns>
 </vr-row>
