PackageDefinition and Package security and trimming implementation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39851

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountViews/MainExtensions/Templates/AccountPackagesViewTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountViews/MainExtensions/Templates/AccountPackagesViewTemplate.html
@@ -1,7 +1,7 @@
 ﻿<div>
     <vr-row removeline>
         <vr-columns width="fullrow" simplecol>
-            <vr-button type="Add" data-onclick="scopeModel.onAccountPackageAdded" standalone haspermission="scopeModel.hasAssignAccountPackagePermission"></vr-button>
+            <vr-button type="Add" data-onclick="scopeModel.onAccountPackageAdded" standalone ng-show="scopeModel.hasAddPermission"></vr-button>
         </vr-columns>
     </vr-row>
     <vr-row vr-loader="scopeModel.isGridLoading">
