Implementing gridcolumn width
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39852

--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Views/GenericAnalytic/Definition/DataRecordSourceEditor.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Views/GenericAnalytic/Definition/DataRecordSourceEditor.html
@@ -53,7 +53,7 @@
                                         <vr-textbox value="dataItem.FieldTitle" isrequired="true"></vr-textbox>
                                     </vr-datagridcolumn>
                                     <vr-datagridcolumn headertext="'Width'" widthfactor="4" disablesorting="true">
-                                        <vr-common-gridcolumnwidth-editor on-ready="dataItem.onGridWidthFactorSelectorReady"></vr-common-gridcolumnwidth-editor>
+                                        <vr-common-gridcolumnwidth-editor on-ready="dataItem.onGridWidthFactorSelectorReady" hidelabel></vr-common-gridcolumnwidth-editor>
                                     </vr-datagridcolumn>
                                 </vr-datagrid>
                             </vr-validator>
