--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Definition/MainExtensions/AnalyticReport/History/Widgets/Grid/Templates/GridWidgetDefinitionTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Definition/MainExtensions/AnalyticReport/History/Widgets/Grid/Templates/GridWidgetDefinitionTemplate.html
@@ -22,7 +22,7 @@
                             <vr-textbox value="dataItem.Title" isrequired="true"></vr-textbox>
                         </vr-datagridcolumn>
                         <vr-datagridcolumn headertext="'Width'" widthfactor="9" disablesorting="true">
-                            <vr-common-gridcolumnwidth-editor on-ready="dataItem.onDimensionGridWidthFactorEditorReady"></vr-common-gridcolumnwidth-editor>
+                            <vr-common-gridcolumnwidth-editor on-ready="dataItem.onDimensionGridWidthFactorEditorReady" hidelabel></vr-common-gridcolumnwidth-editor>
                         </vr-datagridcolumn>
                         <vr-datagridcolumn headertext="'Root Dimension'" widthfactor="3" disablesorting="true">
                             <vr-switch value="dataItem.IsRootDimension"></vr-switch>
@@ -44,7 +44,7 @@
                             <vr-textbox value="dataItem.Title" isrequired="true"></vr-textbox>
                         </vr-datagridcolumn>
                         <vr-datagridcolumn headertext="'Width'" widthfactor="9" disablesorting="true">
-                            <vr-common-gridcolumnwidth-editor on-ready="dataItem.onMeasureGridWidthFactorEditorReady"></vr-common-gridcolumnwidth-editor>                        
+                            <vr-common-gridcolumnwidth-editor on-ready="dataItem.onMeasureGridWidthFactorEditorReady" hidelabel></vr-common-gridcolumnwidth-editor>                        
                         </vr-datagridcolumn>
                     </vr-datagrid>
                 </vr-validator>
