--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/InvoiceGridSettings/Templates/MainGridColumnsEditor.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/InvoiceGridSettings/Templates/MainGridColumnsEditor.html
@@ -5,6 +5,7 @@
                 <vr-columns width="1/2row">
                     <vr-textbox value="scopeModel.header" label="Header" isrequired="true"></vr-textbox>
                 </vr-columns>
+                <vr-common-gridcolumnwidth-editor on-ready="scopeModel.onGridWidthFactorEditorReady"></vr-common-gridcolumnwidth-editor>
                 <vr-columns width="1/2row">
                     <vr-select datasource="scopeModel.invoiceFields"
                                datatextfield="description"
@@ -24,7 +25,7 @@
                                isrequired="scopeModel.isCustomFieldRequired()">
                     </vr-select>
                 </vr-columns>
-            </vr-row>
+        </vr-row>
         </vr-form>
     </vr-modalbody>
     <div>
