--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/WhS_RouteSync/Directives/MainExtensions/RadiusDataManagers/Templates/DoubleSQLRadiusSWDataManagerTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/WhS_RouteSync/Directives/MainExtensions/RadiusDataManagers/Templates/DoubleSQLRadiusSWDataManagerTemplate.html
@@ -12,7 +12,7 @@
             <vr-textbox label="Redundant Connection String" type="text" value="scopeModel.redundantConnectionString"></vr-textbox>
         </vr-columns>
         <vr-columns colnum="{{ctrlData.normalColNum}}">
-            <vr-textbox label="Redundant Maximum Degree of Parallelism" type="number" value="scopeModel.redumdantMaxDoP" minvalue="1" decimalprecision="0"></vr-textbox>
+            <vr-textbox label="Redundant Maximum Degree of Parallelism" type="number" value="scopeModel.redundantMaxDoP" minvalue="1" decimalprecision="0"></vr-textbox>
         </vr-columns>
     </vr-row>
 </vr-section>
