--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/WhS_RouteSync/Directives/RouteSyncSettings/Templates/RouteSyncSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/WhS_RouteSync/Directives/RouteSyncSettings/Templates/RouteSyncSettingsTemplate.html
@@ -1,8 +1,14 @@
 ﻿<vr-columns width="fullrow">
     <vr-tabs>
         <vr-tab header="'Route Sync Process'">
-            <vr-columns width="1/2row">
+            <vr-columns colnum="3">
                 <vr-textbox label="Route Batch Size" value="scopeModel.routeBatchSize" isrequired type="number" minvalue="1" decimalprecision="0"></vr-textbox>
+            </vr-columns>
+            <vr-columns colnum="3">
+                <vr-textbox value="scopeModel.indexCommandTimeoutInMinutes" type="number" label="DB Indexes Timeout(Mins)" isrequired minvalue="0" decimalprecision="0"></vr-textbox>
+            </vr-columns>
+            <vr-columns colnum="1" withemptyline haschildcolumns>
+                <vr-hint value="A value of 0 indicates no limit (an attempt to execute a command will wait indefinitely)"></vr-hint>
             </vr-columns>
         </vr-tab>
     </vr-tabs>
