--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/ActionAudit/Templates/ActionAuditSearch.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/ActionAudit/Templates/ActionAuditSearch.html
@@ -12,20 +12,14 @@
                 <vr-columns width="normal">
                     <vr-sec-user-selector ismultipleselection="true" on-ready="scopeModel.onUserSelectorReady"></vr-sec-user-selector>
                 </vr-columns>
+               <vr-common-actionauditlkup-selector on-ready="scopeModel.onModuleDirectiveReady" customlabel="Module" ismultipleselection normal-col-num="2"></vr-common-actionauditlkup-selector>
+               <vr-common-actionauditlkup-selector on-ready="scopeModel.onEntityDirectiveReady" customlabel="Entity" ismultipleselection normal-col-num="2"></vr-common-actionauditlkup-selector>
+               <vr-common-actionauditlkup-selector on-ready="scopeModel.onActionDirectiveReady" customlabel="Action" ismultipleselection normal-col-num="2"></vr-common-actionauditlkup-selector>
                 <vr-columns width="normal">
-                    <vr-textbox label="Module" value="scopeModel.module"></vr-textbox>
+                    <vr-textbox label="Object Id" value="scopeModel.objectId" ></vr-textbox>
                 </vr-columns>
                 <vr-columns width="normal">
-                    <vr-textbox label="Entity" value="scopeModel.controller"></vr-textbox>
-                </vr-columns>
-                <vr-columns width="normal">
-                    <vr-textbox label="Action" value="scopeModel.action"></vr-textbox>
-                </vr-columns>
-                <vr-columns width="normal">
-                    <vr-textbox label="Object Id" value=""></vr-textbox>
-                </vr-columns>
-                <vr-columns width="normal">
-                    <vr-textbox label="Object Name" value=""></vr-textbox>
+                    <vr-textbox label="Object Name" value="scopeModel.objectName"></vr-textbox>
                 </vr-columns>
                 <vr-columns width="normal">
                     <vr-numeric label="Top" value="scopeModel.top" isrequired="true" minvalue="1"></vr-numeric>
@@ -41,7 +35,7 @@
         </vr-row>
         <vr-row>
             <vr-columns width="fullrow" ng-show="showGrid">
-                <vr-common-useractionaudit-grid on-ready="scopeModel.onGridReady"></vr-common-useractionaudit-grid>
+                <vr-common-actionaudit-grid on-ready="scopeModel.onGridReady"></vr-common-actionaudit-grid>
             </vr-columns>
         </vr-row>
 
